...
            "value" : "Cancel"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
...
            "state" : "translated",
            "value" : "群組名稱"
          }
        }
      }
    },
    "chat.details.members" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "عرض جميع أعضاء المجموعة"
...
            "state" : "translated",
            "value" : "僅關閉本機的 App 內橫幅提醒"
          }
        }
      }
    },
    "chat.details.pin" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "تثبيت المحادثة"
...
            "state" : "translated",
            "value" : "已置頂"
          }
        }
      }
    },
    "chat.details.search" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "البحث في سجل المحادثة"
...
            "value" : "Clear Local Chat History"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "清空本地聊天记录"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "清除本機聊天記錄"
...
            "value" : "Latest messages"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "回到最新"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "回到最新"
...
            "value" : "Remove member"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "移除成员"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "移除成員"
...
